syntax = "proto3";

package com.achievesync.grpc;

option java_package = "com.achievesync.grpc";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (UserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UserResponse);
  rpc GetUserProfile(GetUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc AwardConsistencyPoints(AwardPointsRequest) returns (AwardPointsResponse);
  rpc GetConsistencyPoints(GetPointsRequest) returns (GetPointsResponse);
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  UserResponse user = 4;
}

message UpdateProfileRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

message AwardPointsRequest {
  string user_id = 1;
  int32 points = 2;
  string reason = 3;
}

message AwardPointsResponse {
  bool success = 1;
  string message = 2;
}

message GetPointsRequest {
  string user_id = 1;
}

message GetPointsResponse {
  string user_id = 1;
  int32 total_points = 2;
  string last_updated = 3;
}